--- a/_SettingUpO2_forHMSusers.ipynb
+++ b/_SettingUpO2_forHMSusers.ipynb
@@ -195,7 +195,7 @@
     "sbatch job.sh\n",
     "```\n",
     "\n",
-    "In this file, we would set the number of cores we want (12), the time, partition etc... and also set the file names for the logs \"220415map_%j.out\" which will include the date at the time of running the script and the job number. You can also set it to save the logs to another folder like `bashOut/220415map_%j.out` if you want to organize it.  \n",
+    "In this file, we would set the number of cores we want (12), the time, partition etc... and also set the file names for the logs `220415map_%j.out`, which will include the date at the time of running the script and the job number. You can also set it to save the logs to another folder like `bashOut/220415map_%j.out` if you want to organize it.  \n",
     "For the commands we run, we still go through the motions of loading the conda module (in case its not automatically loaded), activating the LSEnv, then running the script with the python command.  \n",
     "In this case we used the `python3` command just to make sure we are using the correct python version.  \n",
     "If you are in the LSEnv, both `python` and `python3` should point to the same python version since thats the only version installed in \"LSEnv\".  \n",
