--- a/5.OrganizeReadCounts.ipynb
+++ b/5.OrganizeReadCounts.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "### Reading the GFF file\n",
     "We will take the gene name and gene type from the GFF file.  \n",
-    "You can create a dictionary of ID:gene name here from the GTF to premake a .csv file to read if you dont want the GTF file taking up space.  \n",
+    "If you dont want the GTF file taking up space, you could premake a .csv file with geneID:geneName and reference that file instead of the GTF file.  \n",
     "We wont do that today."
    ]
   },
