--- a/_SettingUpO2_forHMSusers.ipynb
+++ b/_SettingUpO2_forHMSusers.ipynb
@@ -17,7 +17,7 @@
     "Which will land you on the login node.  \n",
     "`(base) nl82@login05:~$ `  \n",
     "\n",
-    "On the o2 website, there is a set of instructions that tell you how to install o2 on your acct.  \n",
+    "On the o2 website, there is a set of instructions that tell you how to install conda on your acct.  \n",
     "https://harvardmed.atlassian.net/wiki/spaces/O2/pages/1594263516/Conda+on+O2  \n",
     "You can largely just follow those directions, and you should be good.  \n",
     "\n",
