--- a/0.IntroToJupyterLab.ipynb
+++ b/0.IntroToJupyterLab.ipynb
@@ -49,7 +49,15 @@
    },
    "source": [
     "#### Notebook \"cells\"\n",
-    "This is a Markdown cell, which means you can use latex to write equations like this: $\\sum x_i$    \n",
+    "This is a Markdown cell, which means you can use various syntax for \n",
+    "## Headings  \n",
+    "*italics*  \n",
+    "**Bold**  \n",
+    "***Bold Italics***  \n",
+    "etc...\n",
+    "This website has a nice list to get you started https://www.markdownguide.org/basic-syntax/.  \n",
+    "\n",
+    "You can even use latex to write equations like this: $\\sum x_i$    \n",
     "Or like this:  \n",
     "\n",
     "$$\n",
