--- a/5.OrganizeReadCounts.ipynb
+++ b/5.OrganizeReadCounts.ipynb
@@ -89,7 +89,7 @@
    "source": [
     "### Reading the GFF file\n",
     "We will take the gene name and gene type from the GFF file.  \n",
-    "If you dont want the GTF file taking up space, you could premake a .csv file with geneID:geneName and reference that file instead of the GTF file.  \n",
+    "If you dont want the GFF file taking up space, you could premake a .csv file with geneID:geneName and reference that file instead of the GFF file.  \n",
     "We wont do that today."
    ]
   },
