--- a/3.AssignGenes.ipynb
+++ b/3.AssignGenes.ipynb
@@ -423,6 +423,7 @@
     "You will typically get an error saying there is no index file.  \n",
     "If you want to generate an index file to remove that error, you can run `samtools index`.  \n",
     "However we do not actually need an index file to iterate over the samfile which is what we are mainly going to do.  \n",
+    "As stated here http://www.htslib.org/doc/samtools-index.html, an index is only needed if you want to retrieve a specific region, like all chr1 maps for example. \n",
     "\n",
     "As an example this is mentioned in the `fetch` function for pysam.\n",
     "```\n",
