--- a/2.MapSequences.ipynb
+++ b/2.MapSequences.ipynb
@@ -10,7 +10,7 @@
     "Unfortunately I will not be able to run that here because the STAR aligner typically requires 32 gB of memory.  \n",
     "Building an index will also take up 20-30 gB of free space and sometimes 64 gB of memory.  \n",
     "\n",
-    "This is where you will need the o2 cluster. Or a high end workstation. Or AWS (...F**ing bezos).  \n",
+    "This is where you will need the o2 cluster. Or a high end workstation. Or AWS.  \n",
     "However, I can install the STAR aligner locally to go over the options we use."
    ]
   },
